# video-analyzer

./: README.md  pyproject.toml
framework/: __init__.py
framework/accuracy_evaluation/: main.py
framework/accuracy_evaluation/ui/: button.py  dict_view.py  event_timeline.py  file_selector.py  image.py  number_input.py  slider.py  timeline.py
framework/accuracy_evaluation/window/: analysis_result_window.py  file_input_window.py  parameter_setup_window.py  processing_window.py
framework/base_stream_analyzer/: BaseStreamAnalyzer.py  __init__.py
framework/event_viewer/: EventTimeline.js  index.html
framework/log_viewer/: LogTimeline.js  index.html
framework/performance_evaluation/: client.py  main.py  server.py
framework/performance_evaluation/log/: logger.py
framework/performance_evaluation/proto/stream/v1/: analyzer.proto  analyzer_pb2.py  analyzer_pb2.pyi  analyzer_pb2_grpc.py
src/: StreamAnalyzer.py
src/util/: RectTracker.py
