[project]
name = "video-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "av>=17.0.0",
    "click>=8.3.1",
    "grpcio>=1.78.0",
    "mypy-protobuf>=5.0.0",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "ultralytics>=8.4.21",
]
